--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "debug": "~2.1.0",
     "express": "~4.10.6",
     "jade": "~1.8.2",
+    "memory-cache": "0.0.5",
     "morgan": "~1.5.0",
+    "node-uuid": "^1.4.2",
     "nodemon": "^1.2.1",
     "request": "^2.51.0",
     "stylus": "0.49.3"
